--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@ limitations under the License.
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <sonar.organization>davidnavarreics</sonar.organization>
-        <sonar.projectKey>DavidNavarreICS_sharePortfolio</sonar.projectKey>
+        <sonar.organization>theomr1</sonar.organization>
+        <sonar.projectKey>theomr1_sharePortfolio---VSCode</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.java.libraries></sonar.java.libraries>
     </properties>
